voting and submitter tracking in place and working

--- a/index.html
+++ b/index.html
@@ -15,6 +15,35 @@
       .header h3 {
         margin-top: 10px;
       }
+
+      .links-list li {
+        position: relative;
+        padding-left: 40px;
+      }
+
+      .up, .down {
+        position: absolute;
+        left: 10px;
+        color: #BBB;
+        cursor: pointer;
+      } 
+
+      .up {
+        top: 5px;
+      }
+
+      .down {
+        top: 40px;
+      }
+
+      .vote-total {
+        font-size: 12px;
+        position: absolute;
+        left: 7px;
+        top: 21px;
+        text-align: center;
+        width: 20px;
+      }
     </style>
   </head>
 
