top links page working

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         text-align: center;
         width: 20px;
       }
+
+      .show-more {
+        cursor: pointer;
+      }
+      .show-more:hover {
+        background-color: #F2F2F2;
+      }
     </style>
   </head>
 
@@ -99,8 +106,8 @@
         </div>
         <ul class="list-group links-list">
         </ul>
+        <div class="panel-footer text-center show-more">Show More</div>
       </div>
-
     </div>
 
 
