--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         width: 20px;
       }
 
+      .upvoted .up.vote, .downvoted .down.vote {
+        color: #999;
+      }
+
       .show-more {
         cursor: pointer;
       }
@@ -60,12 +64,17 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right auth-links">
+
             <li role="presentation" class="logout" style="display:none;"><a href="#logout">Logout</a></li>
             <li role="presentation" class="login" style="display:none;"><a href="#login">Login</a></li>
             <li role="presentation" class="signup" style="display:none;"><a href="signup"> Signup</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">LiveLinks</h3>
+        <h3 class="text-muted pull-left">LiveLinks</h3>
+        <div role="presentation" class="navbar-text pull-left">
+          <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> 
+          <span id="viewer-count">20</span>
+        </div>
       </div>
 
       <div class="panel panel-default auth-forms" style="display:none;">
